# decode-memcached

./: .gitignore  CMakeLists.txt
memcached-1.4.15/: CMakeLists.txt  Makefile  assoc.c  config.h  config.status  items.c  memcached  memcached-debug  memcached.c  memcached.h  sizes  slabs.c  testapp  thread.c  timedrun
memcached-1.4.15/.deps/: cache.Po  memcached-assoc.Po  memcached-cache.Po  memcached-daemon.Po  memcached-hash.Po  memcached-items.Po  memcached-memcached.Po  memcached-slabs.Po  memcached-stats.Po  memcached-thread.Po  memcached-util.Po  memcached_debug-assoc.Po  memcached_debug-cache.Po  memcached_debug-daemon.Po  memcached_debug-hash.Po  memcached_debug-items.Po  memcached_debug-memcached.Po  memcached_debug-slabs.Po  memcached_debug-stats.Po  memcached_debug-thread.Po  memcached_debug-util.Po  sizes.Po  testapp.Po  timedrun.Po  util.Po
memcached-1.4.15/doc/: Makefile
